--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.11",
     "path": "^0.12.7"
   },
-  "proxy":  "http://localhost:4000"
+  "proxy": "http://localhost:4000"
 }
