--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URL=mongodb://localhost:27017/grocery-app
+MONGO_URL=mongodb+srv://hasanAbdirahman:GhyB4YEYEZORXdgy@grocery.kcszfoa.mongodb.net/?retryWrites=true&w=majority&appName=Grocery
 FRONTEND_URL= http://localhost:3000
 EXPIRED_IN=7
 COOKIE_EXPIRED= 7
