--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -23,6 +24,5 @@
     "mongoose": "^8.2.0",
     "nodemailer": "^6.9.11",
     "path": "^0.12.7"
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
