--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "country-state-city": "^3.2.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
@@ -27,5 +28,4 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^5.1.1"
   }
-
 }
